fix(router): hint animations with will-change to fix jumpy behavior

--- a/src/navigation/navigation.less
+++ b/src/navigation/navigation.less
@@ -59,6 +59,7 @@
 .route {
   animation-timing-function: linear;
   animation-fill-mode: forwards;
+  will-change: transform, opacity;
 }
 
 .route.enter.in {
